--- a/src/App.css
+++ b/src/App.css
@@ -1,61 +1,116 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
-body{
+body {
   font-family: 'Poppins', sans-serif;
+  background-color: #4B0082;
 }
 
-.form{
+.userForm-container {
+  margin-top: 30px;
+  display: flex;
+  justify-content: center;
+  color: aliceblue;
+  margin-bottom: 30px;
+}
+
+.form {
   padding: 10px;
-  width: 400px;
+  width: 405px;
+  border: solid 3px;
+  border-radius: 15px;
 }
 
-.form-imgContainer img{
+.form-imgContainer img {
   width: 15px;
   height: auto;
   margin: auto;
 }
 
-.form-name-container{
+.form-name-container {
   display: flex;
-  justify-content: left ;
+  justify-content: left;
   gap: 5px;
   margin-bottom: 10px;
 }
 
-.form-email-container{
+.form-email-container {
   display: flex;
-  justify-content: left ;
+  justify-content: left;
   gap: 5px;
   margin-bottom: 10px;
 }
 
-.form-inputEmail, .form-inputPass{
+.form-inputEmail,
+.form-inputPass {
   width: 100%;
 }
 
-.form-password-container{
+.form-password-container {
   display: flex;
-  justify-content: left ;
+  justify-content: left;
   gap: 5px;
   margin-bottom: 10px;
 }
 
-.form-birthday-container{
+.form-birthday-container {
   display: flex;
-  justify-content: left ;
+  justify-content: left;
   gap: 5px;
   margin-bottom: 10px;
 }
 
-.form-button-container{
+.form-button-container {
   display: flex;
   justify-content: center;
   text-align: center;
 }
 
-.form-button{
+.form-button {
   width: 300px;
   height: 30px;
   background-color: aquamarine;
   border-radius: 15px;
+}
+
+.userList-global-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  margin: auto;
+  padding-left: 50px;
+  padding-right: 50px;
+  gap: 20px;
+}
+
+.userList-div-container {
+  min-width: 400px;
+  padding: 20px;
+  border: none;
+  border-radius: 20px;
+  display: flex;
+  justify-content: space-between;
+  background-color: aliceblue;
+}
+
+.userList-information li {
+  margin-bottom: 10px;
+}
+
+.userList-name {
+  font-size: 25px;
+  font-weight: 700;
+}
+
+.userList-date img {
+  width: 20px;
+  margin-left: 10px;
+  margin-right: 5px;
+}
+
+.userList-buttons {
+  display: flex;
+  align-items: flex-end;
+}
+
+.userList-buttons img {
+  width: 30px;
 }
